completion of frontend stubbing

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="todoContainer"></div>
         <div class="todo">
             <p>This is a todo to do today</p>
-            <div>
-                <button>
+            <div class = btnContainer>
+                <button class="iconBtn">
                     <i class="fa-solid fa-pen-to-square"></i>
                 </button>
-                <button>
+                <button class="iconBtn">
                     <i class="fa-solid fa-trash"></i>
                 </button>
             </div>
