--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <h1>My ToDo List</h1>
-    <form>
+    <form onsubmit="return false">
         <textarea placeholder="Enter todo ..."></textarea>
-        <button><p>Add Todo</p></button>
+        <button id="addBtn"><p>Add Todo</p></button>
     </form>
     <section>
         <h4>Current ToDos</h4>
@@ -34,4 +34,5 @@
         </div>
     </section>
 </body>
+<script src="index.js"></script>
 </html>
