add feature edit, delete

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section>
         <h4>Current ToDos</h4>
         <div class="todoContainer"></div>
-        <div class="todo">
+        <!-- <div class="todo">
             <p>This is a todo to do today</p>
             <div class = btnContainer>
                 <button class="iconBtn">
@@ -31,7 +31,7 @@
                     <i class="fa-solid fa-trash"></i>
                 </button>
             </div>
-        </div>
+        </div> -->
     </section>
 </body>
 <script src="index.js"></script>
